...
    FoodKeyword("beef", FoodGroup.MEAT),
    FoodKeyword("pork", FoodGroup.MEAT),
    FoodKeyword("chicken", FoodGroup.MEAT),
    FoodKeyword("duck", FoodGroup.MEAT),
    FoodKeyword("lamb", FoodGroup.MEAT),
    // 유제품
    FoodKeyword("우유", FoodGroup.DAIRY),
    FoodKeyword("유제품", FoodGroup.DAIRY),
    FoodKeyword("치즈", FoodGroup.DAIRY),
    FoodKeyword("cheese", FoodGroup.DAIRY),
    FoodKeyword("요거트", FoodGroup.DAIRY),
    FoodKeyword("요구르트", FoodGroup.DAIRY),
    FoodKeyword("yogurt", FoodGroup.DAIRY),
    FoodKeyword("버터", FoodGroup.DAIRY),
    FoodKeyword("butter", FoodGroup.DAIRY),
    FoodKeyword("크림", FoodGroup.DAIRY),
    FoodKeyword("cream", FoodGroup.DAIRY),
    FoodKeyword("아이스크림", FoodGroup.DAIRY),
    FoodKeyword("연유", FoodGroup.DAIRY),
    FoodKeyword("milk", FoodGroup.DAIRY),
    // 달걀
    FoodKeyword("계란", FoodGroup.EGG),
    FoodKeyword("달걀", FoodGroup.EGG),
    FoodKeyword("메추리알", FoodGroup.EGG),
    FoodKeyword("egg", FoodGroup.EGG),
    FoodKeyword("알", FoodGroup.EGG, wholeNameOnly = true),
    // 음료
    FoodKeyword("음료", FoodGroup.DRINK),
...
    FoodKeyword("햄", FoodGroup.PROCESSED),
    FoodKeyword("베이컨", FoodGroup.PROCESSED),
    FoodKeyword("어묵", FoodGroup.PROCESSED),
    FoodKeyword("맛살", FoodGroup.PROCESSED),
    FoodKeyword("스팸", FoodGroup.PROCESSED),
    FoodKeyword("너겟", FoodGroup.PROCESSED),
    FoodKeyword("두부", FoodGroup.PROCESSED),
    FoodKeyword("과자", FoodGroup.PROCESSED),
    FoodKeyword("쿠키", FoodGroup.PROCESSED),
    FoodKeyword("크래커", FoodGroup.PROCESSED),
    FoodKeyword("초콜릿", FoodGroup.PROCESSED),
    FoodKeyword("사탕", FoodGroup.PROCESSED),
    FoodKeyword("젤리", FoodGroup.PROCESSED),
...
